--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="charchoDiv">
-            
+            <audio id="myAudio" src="./mixkit-arcade-game-jump-coin-216.wav"></audio>
 
         </div>
     </div>
